--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
-/dist-server
-/tmp
-/out-tsc
+/ClientApp/dist
+/ClientApp/dist-server
+/ClientApp/tmp
+/ClientApp/out-tsc
 
 # dependencies
 /ServerApp/node_modules
@@ -36,8 +36,8 @@ testem.log
 /typings
 
 # e2e
-/e2e/*.js
-/e2e/*.map
+/ClientApp/e2e/*.js
+/ClientApp/e2e/*.map
 
 # System Files
 .DS_Store
