--- a/ServerApp/package.json
+++ b/ServerApp/package.json
@@ -4,7 +4,7 @@
   "description": "Site pour cher des petits tafz",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -14,7 +14,8 @@
   "author": "QlimHaXx, AntrHaXx",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "nodemon": "^1.17.3"
   },
   "devDependencies": {
     "@angular/cli": "^1.7.4"
