--- a/ServerApp/package.json
+++ b/ServerApp/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "mongodb": "^3.0.6",
     "nodemon": "^1.17.3"
   },
   "devDependencies": {
