--- a/ServerApp/package.json
+++ b/ServerApp/package.json
@@ -14,6 +14,7 @@
   "author": "QlimHaXx, AntrHaXx",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "mongodb": "^3.0.6",
     "nodemon": "^1.17.3"
